--- a/crypto.ipynb
+++ b/crypto.ipynb
@@ -12,12 +12,393 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>CoinName</th>\n",
+       "      <th>Algorithm</th>\n",
+       "      <th>IsTrading</th>\n",
+       "      <th>ProofType</th>\n",
+       "      <th>TotalCoinsMined</th>\n",
+       "      <th>TotalCoinSupply</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>42</td>\n",
+       "      <td>42 Coin</td>\n",
+       "      <td>Scrypt</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoW/PoS</td>\n",
+       "      <td>4.199995e+01</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>365</td>\n",
+       "      <td>365Coin</td>\n",
+       "      <td>X11</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoW/PoS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2300000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>404</td>\n",
+       "      <td>404Coin</td>\n",
+       "      <td>Scrypt</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoW/PoS</td>\n",
+       "      <td>1.055185e+09</td>\n",
+       "      <td>532000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>611</td>\n",
+       "      <td>SixEleven</td>\n",
+       "      <td>SHA-256</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoW</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>611000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>808</td>\n",
+       "      <td>808</td>\n",
+       "      <td>SHA-256</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoW/PoS</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1247</th>\n",
+       "      <td>XBC</td>\n",
+       "      <td>BitcoinPlus</td>\n",
+       "      <td>Scrypt</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoS</td>\n",
+       "      <td>1.283270e+05</td>\n",
+       "      <td>1000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1248</th>\n",
+       "      <td>DVTC</td>\n",
+       "      <td>DivotyCoin</td>\n",
+       "      <td>Scrypt</td>\n",
+       "      <td>False</td>\n",
+       "      <td>PoW/PoS</td>\n",
+       "      <td>2.149121e+07</td>\n",
+       "      <td>100000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1249</th>\n",
+       "      <td>GIOT</td>\n",
+       "      <td>Giotto Coin</td>\n",
+       "      <td>Scrypt</td>\n",
+       "      <td>False</td>\n",
+       "      <td>PoW/PoS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>233100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1250</th>\n",
+       "      <td>OPSC</td>\n",
+       "      <td>OpenSourceCoin</td>\n",
+       "      <td>SHA-256</td>\n",
+       "      <td>False</td>\n",
+       "      <td>PoW/PoS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1251</th>\n",
+       "      <td>PUNK</td>\n",
+       "      <td>SteamPunk</td>\n",
+       "      <td>PoS</td>\n",
+       "      <td>False</td>\n",
+       "      <td>PoS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>40000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1252 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0        CoinName Algorithm  IsTrading ProofType  \\\n",
+       "0            42         42 Coin    Scrypt       True   PoW/PoS   \n",
+       "1           365         365Coin       X11       True   PoW/PoS   \n",
+       "2           404         404Coin    Scrypt       True   PoW/PoS   \n",
+       "3           611       SixEleven   SHA-256       True       PoW   \n",
+       "4           808             808   SHA-256       True   PoW/PoS   \n",
+       "...         ...             ...       ...        ...       ...   \n",
+       "1247        XBC     BitcoinPlus    Scrypt       True       PoS   \n",
+       "1248       DVTC      DivotyCoin    Scrypt      False   PoW/PoS   \n",
+       "1249       GIOT     Giotto Coin    Scrypt      False   PoW/PoS   \n",
+       "1250       OPSC  OpenSourceCoin   SHA-256      False   PoW/PoS   \n",
+       "1251       PUNK       SteamPunk       PoS      False       PoS   \n",
+       "\n",
+       "      TotalCoinsMined TotalCoinSupply  \n",
+       "0        4.199995e+01              42  \n",
+       "1                 NaN      2300000000  \n",
+       "2        1.055185e+09       532000000  \n",
+       "3                 NaN          611000  \n",
+       "4        0.000000e+00               0  \n",
+       "...               ...             ...  \n",
+       "1247     1.283270e+05         1000000  \n",
+       "1248     2.149121e+07       100000000  \n",
+       "1249              NaN       233100000  \n",
+       "1250              NaN        21000000  \n",
+       "1251              NaN        40000000  \n",
+       "\n",
+       "[1252 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(\"crypto_data.csv\")\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Algorithm</th>\n",
+       "      <th>IsTrading</th>\n",
+       "      <th>ProofType</th>\n",
+       "      <th>TotalCoinsMined</th>\n",
+       "      <th>TotalCoinSupply</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>42</td>\n",
+       "      <td>Scrypt</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoW/PoS</td>\n",
+       "      <td>4.199995e+01</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>404</td>\n",
+       "      <td>Scrypt</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoW/PoS</td>\n",
+       "      <td>1.055185e+09</td>\n",
+       "      <td>532000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1337</td>\n",
+       "      <td>X13</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoW/PoS</td>\n",
+       "      <td>2.927942e+10</td>\n",
+       "      <td>314159265359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>BTC</td>\n",
+       "      <td>SHA-256</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoW</td>\n",
+       "      <td>1.792718e+07</td>\n",
+       "      <td>21000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>ETH</td>\n",
+       "      <td>Ethash</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoW</td>\n",
+       "      <td>1.076842e+08</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1238</th>\n",
+       "      <td>ZEPH</td>\n",
+       "      <td>SHA-256</td>\n",
+       "      <td>True</td>\n",
+       "      <td>DPoS</td>\n",
+       "      <td>2.000000e+09</td>\n",
+       "      <td>2000000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1242</th>\n",
+       "      <td>GAP</td>\n",
+       "      <td>Scrypt</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoW/PoS</td>\n",
+       "      <td>1.493105e+07</td>\n",
+       "      <td>250000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1245</th>\n",
+       "      <td>BDX</td>\n",
+       "      <td>CryptoNight</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoW</td>\n",
+       "      <td>9.802226e+08</td>\n",
+       "      <td>1400222610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1246</th>\n",
+       "      <td>ZEN</td>\n",
+       "      <td>Equihash</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoW</td>\n",
+       "      <td>7.296538e+06</td>\n",
+       "      <td>21000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1247</th>\n",
+       "      <td>XBC</td>\n",
+       "      <td>Scrypt</td>\n",
+       "      <td>True</td>\n",
+       "      <td>PoS</td>\n",
+       "      <td>1.283270e+05</td>\n",
+       "      <td>1000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>532 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0    Algorithm  IsTrading ProofType  TotalCoinsMined  \\\n",
+       "0            42       Scrypt       True   PoW/PoS     4.199995e+01   \n",
+       "2           404       Scrypt       True   PoW/PoS     1.055185e+09   \n",
+       "5          1337          X13       True   PoW/PoS     2.927942e+10   \n",
+       "7           BTC      SHA-256       True       PoW     1.792718e+07   \n",
+       "8           ETH       Ethash       True       PoW     1.076842e+08   \n",
+       "...         ...          ...        ...       ...              ...   \n",
+       "1238       ZEPH      SHA-256       True      DPoS     2.000000e+09   \n",
+       "1242        GAP       Scrypt       True   PoW/PoS     1.493105e+07   \n",
+       "1245        BDX  CryptoNight       True       PoW     9.802226e+08   \n",
+       "1246        ZEN     Equihash       True       PoW     7.296538e+06   \n",
+       "1247        XBC       Scrypt       True       PoS     1.283270e+05   \n",
+       "\n",
+       "     TotalCoinSupply  \n",
+       "0                 42  \n",
+       "2          532000000  \n",
+       "5       314159265359  \n",
+       "7           21000000  \n",
+       "8                  0  \n",
+       "...              ...  \n",
+       "1238      2000000000  \n",
+       "1242       250000000  \n",
+       "1245      1400222610  \n",
+       "1246        21000000  \n",
+       "1247         1000000  \n",
+       "\n",
+       "[532 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Filtering data frame for only currently trading\n",
+    "cur_trad = data[data['IsTrading']==True]\n",
+    "cur_trad\n",
+    "\n",
+    "# Dropping rows with any NA values\n",
+    "crypto_df = cur_trad.dropna()\n",
+    "crypto_df\n",
+    "\n",
+    "# Filtering for only crypto that has been mined\n",
+    "crypto_df = crypto_df[crypto_df['TotalCoinsMined']>0]\n",
+    "crypto_df\n",
+    "\n",
+    "# Removing CoinName since it is not a feature that would be meaningful for a model/analysis\n",
+    "crypto_df = crypto_df.drop('CoinName',axis=1)\n",
+    "crypto_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = pd.read_csv(\"crypto_data.csv\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
